// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CodeMania/ForumView Default Forum View 1`] = `
<div>
  Loading...
</div>
`;

exports[`Storyshots CodeMania/PostCard Default Post Card 1`] = `
<div
  className="item"
>
  <div
    className="content"
  >
    <a
      className="header"
    >
      E-sign API for PDF documents
    </a>
    <div
      className="meta"
    >
      <span
        className="cinema"
      >
        Ritesh Mehrotra
      </span>
    </div>
    <div
      className="description"
    >
      lorem sdfmsaofas
    </div>
    <div
      className="extra"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Java
      </div>
      <div
        className="ui label"
        onClick={[Function]}
      >
        API
      </div>
      <div
        className="ui label"
        onClick={[Function]}
      >
        Concurrency
      </div>
    </div>
    <div
      className="ui threaded comments"
    >
      <h3
        className="ui dividing header"
      >
        Comments
      </h3>
      <div
        className="comment"
      >
        <a
          className="avatar"
        >
          <img
            src="https://react.semantic-ui.com/images/avatar/small/matt.jpg"
          />
        </a>
        <div
          className="content"
        >
          <a
            className="author"
          >
            Matt
          </a>
          <div
            className="metadata"
          >
            <span>
              Today at 5:42PM
            </span>
          </div>
          <div
            className="text"
          >
            How artistic!
          </div>
          <div
            className="actions"
          >
            <a>
              Reply
            </a>
          </div>
        </div>
      </div>
      <div
        className="comment"
      >
        <a
          className="avatar"
        >
          <img
            src="https://react.semantic-ui.com/images/avatar/small/elliot.jpg"
          />
        </a>
        <div
          className="content"
        >
          <a
            className="author"
          >
            Elliot Fu
          </a>
          <div
            className="metadata"
          >
            <span>
              Yesterday at 12:30AM
            </span>
          </div>
          <div
            className="text"
          >
            <p>
              This has been very useful for my research. Thanks as well!
            </p>
          </div>
          <div
            className="actions"
          >
            <a>
              Reply
            </a>
          </div>
        </div>
        <div
          className="ui comments"
        >
          <div
            className="comment"
          >
            <a
              className="avatar"
            >
              <img
                src="https://react.semantic-ui.com/images/avatar/small/jenny.jpg"
              />
            </a>
            <div
              className="content"
            >
              <a
                className="author"
              >
                Jenny Hess
              </a>
              <div
                className="metadata"
              >
                <span>
                  Just now
                </span>
              </div>
              <div
                className="text"
              >
                Elliot you are always so right :)
              </div>
              <div
                className="actions"
              >
                <a>
                  Reply
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="comment"
      >
        <a
          className="avatar"
        >
          <img
            src="https://react.semantic-ui.com/images/avatar/small/joe.jpg"
          />
        </a>
        <div
          className="content"
        >
          <a
            className="author"
          >
            Joe Henderson
          </a>
          <div
            className="metadata"
          >
            <span>
              5 days ago
            </span>
          </div>
          <div
            className="text"
          >
            Dude, this is awesome. Thanks so much
          </div>
          <div
            className="actions"
          >
            <a>
              Reply
            </a>
          </div>
        </div>
      </div>
      <form
        className="ui reply form"
        onSubmit={[Function]}
      >
        <div
          className="field"
        >
          <textarea
            aria-describedby={null}
            onChange={[Function]}
            onInput={[Function]}
            rows={3}
          />
        </div>
        <button
          className="ui icon primary left labeled button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="edit icon"
            onClick={[Function]}
          />
          Add Reply
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots CodeMania/Project Active Project Card 1`] = `
<div
  className="ui green raised card"
  onClick={[Function]}
  style={
    Object {
      "padding": "5px",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="header"
    />
    <div
      className="meta"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Ritesh
      </div>
    </div>
    <div
      className="description"
    >
      <a
        className="ui green ribbon label"
        onClick={[Function]}
      />
    </div>
    <div
      className="description"
    >
      New React project
    </div>
  </div>
  <div
    className="extra content"
  >
    <i
      aria-hidden="true"
      className="user times icon"
      onClick={[Function]}
    />
     contributors
    <button
      className="ui black right floated button"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="yellow eye icon"
        onClick={[Function]}
      />
      View
    </button>
  </div>
</div>
`;

exports[`Storyshots CodeMania/Project Default Project Card 1`] = `
<div
  className="ui green raised card"
  onClick={[Function]}
  style={
    Object {
      "padding": "5px",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="header"
    />
    <div
      className="meta"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Ritesh
      </div>
    </div>
    <div
      className="description"
    >
      <a
        className="ui green ribbon label"
        onClick={[Function]}
      />
    </div>
    <div
      className="description"
    >
      New React project
    </div>
  </div>
  <div
    className="extra content"
  >
    <i
      aria-hidden="true"
      className="user times icon"
      onClick={[Function]}
    />
     contributors
    <button
      className="ui black right floated button"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="yellow eye icon"
        onClick={[Function]}
      />
      View
    </button>
  </div>
</div>
`;

exports[`Storyshots CodeMania/Project Inactive Project Card 1`] = `
<div
  className="ui grey raised card"
  onClick={[Function]}
  style={
    Object {
      "padding": "5px",
    }
  }
>
  <div
    className="content"
  >
    <div
      className="header"
    />
    <div
      className="meta"
    >
      <div
        className="ui label"
        onClick={[Function]}
      >
        Ritesh
      </div>
    </div>
    <div
      className="description"
    >
      <a
        className="ui green ribbon label"
        onClick={[Function]}
      />
    </div>
    <div
      className="description"
    >
      New React project
    </div>
  </div>
  <div
    className="extra content"
  >
    <i
      aria-hidden="true"
      className="user times icon"
      onClick={[Function]}
    />
     contributors
    <button
      className="ui black right floated button"
      onClick={[Function]}
    >
      <i
        aria-hidden="true"
        className="yellow eye icon"
        onClick={[Function]}
      />
      View
    </button>
  </div>
</div>
`;

exports[`Storyshots CodeMania/ProjectsView Default Projects View 1`] = `
<div>
  Loading...
</div>
`;

exports[`Storyshots CodeMania/TechTalks Default Talks View 1`] = `
<div
  className="ui items"
>
  <div
    className="item"
  >
    <div
      className="image"
    >
      <img
        src="/images/avatar/video_thumbnail.jpg"
      />
    </div>
    <div
      className="content"
    >
      <a
        className="header"
      >
         Intro to SRE, Chaos and Gremlin
      </a>
      <div
        className="meta"
      >
        Speaker: Jason Yee
      </div>
      <div
        className="description"
      >
        Are you interested in SRE and Chaos Engineering? What is it about? Gremlin is a platform that has been lead advocate for SRE and chaos engineering . Come Join us with JASON YEE, Director of Advocacy Gremlin Inc to learn more And have an interesting discussion with us.
      </div>
      <div
        className="extra"
      >
        Published on: Dec 12 2020
      </div>
    </div>
  </div>
  <div
    className="item"
  >
    <div
      className="image"
    >
      <img
        src="/images/avatar/video_thumbnail.jpg"
      />
    </div>
    <div
      className="content"
    >
      <a
        className="header"
      >
        The age of micro-frontends
      </a>
      <div
        className="meta"
      >
        Speaker: Ritesh Mehrotra
      </div>
      <div
        className="description"
      >
        <p>
          In recent years, we have done well to evolve from the big monolith, hard to change products, to developing small, independent, specific and highly scalable solutions in form of micro-services. Though one area, that hasn’t witnessed the revolution as yet in the front-end, plagued by complex, unstructured and hard to maintain implementations.
        </p>
        <p>
          Won’t it be nice if you could develop front-ends with SRP, and as highly decoupled independent features that can be plugged with any web app, be it an age-old monolith, a SPA or PWA? Ever wondered if you could readily combine the powers of Angular, React and Vue in one single application?
        </p>
      </div>
      <div
        className="extra"
      >
        Published on: Jul 01 2019 
      </div>
    </div>
  </div>
</div>
`;
